Prevent footer tagline wrap

--- a/components/SiteFooter/SiteFooter.module.css
+++ b/components/SiteFooter/SiteFooter.module.css
@@ -59,6 +59,10 @@
   display: inline-block;
 }
 
+.noWrap {
+  white-space: nowrap;
+}
+
 @media (max-width: 1024px) {
   .inner {
     grid-template-columns: 21% 25% 25% 29%;
